Fixed broken layout of dratf.php
git-svn-id: svn://109.123.66.160/home/vnwkrepos/trunk@386 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -158,6 +158,7 @@ html, body {
 #contentTable{
 	background-color: white;
 	clear:both;
+	overflow-x: hidden;
 }
 .clear{
     clear:both;
@@ -168,6 +169,7 @@ html, body {
 	#contentTable #postContent {
 		margin-top: 0px;
 		padding: 10px;
+		overflow-x: hidden;
 	}
 	#contentTable #postContent #postContent_relative{
 		position:relative;
@@ -513,14 +515,14 @@ width: 100%;
 }
 
 td.left {
-	width : 20%;
+	width : 180px;
 	vertical-align: top;
 	border-right: 1px solid #C8C8C8;
 	border-left: 1px solid #C8C8C8;
 }
 
 td.center {
-	width : 60%;
+	width : 640;
 	vertical-align: top;
 	border-bottom: 1px solid #C8C8C8;
 	background:#FFFFFF;
@@ -533,7 +535,7 @@ table.leftmenu{
 	border: none;
 }
 td.right{
-    width: 20%;
+    width: 180px;
 }
 #destinationDiv{
 	margin-left: 10px;	
